# PAOO

tema2/wardrobe2/: CMakeLists.txt  build.bat  build.ps1  build.sh  clean.sh  run.sh  runall.sh
tema2/wardrobe2/include/: ClothingItem.hpp  Wardrobe.hpp
tema2/wardrobe2/src/: Wardrobe.cpp  main.cpp
tema3/: CMakeLists.txt  build.sh  test_move.txt  test_raii.txt  test_sync.txt  test_unsync.txt
tema3/src/: FileDescriptor.cpp  FileDescriptor.h  Investment.cpp  Investment.h  Lock.cpp  Lock.h  ThreadedFileOps.cpp  ThreadedFileOps.h  main.cpp
wardrobe/: CMakeLists.txt
wardrobe/include/: ClothingItem.hpp  Wardrobe.hpp
wardrobe/src/: ClothingItem.cpp  Wardrobe.cpp  main.cpp
